--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
  
     <section class="content">
-        <h1 class="p-2 text-center">ISTA TAN-TAN</h1>
+        <h1 class="p-2 text-center">ISTA ofppt</h1>
         <h6>STA Tan-Tan (Institut Spécialisé de Technologie Appliquée de Tan-Tan) is a public vocational training institution in Tan-Tan, Morocco. It's part of the OFPPT network and provides practical, job-oriented training in various technical fields to equip students with the skills needed for successful careers in the region's growing industries.</h6>
         <button class="btn btn-primary p-2 m-3" type="button" id="dropdownMenuButton2">
             MORE .....
